# test-mcbe-client

./: CMakeLists.txt  Load.cpp  README.md
Client/: CMakeLists.txt  System.cpp  System.h
Client/Command/: CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
Client/Command/Impl/: CMakeLists.txt  Command.cpp  Command.h  CommandInstanceComponent.h  HiCommand.cpp  HiCommand.h  PingCommand.cpp  PingCommand.h  ToggleCommand.cpp  ToggleCommand.h
Client/Event/: EventHandler.h  Listener.h
Client/Event/Impl/: AddShapesEvent.h  BindEvent.h  CIUpdateEvent.h  Cancellable.h  DoInWaterSensingEvent.h  KeyInputEvent.h  MouseInputEvent.h  PacketSendEvent.h  RenderEvent.h  TestEvent.h
Client/Hook/: CMakeLists.txt  HookManager.cpp  HookManager.h
Client/Hook/Impl/: AddShapesHook.cpp  AddShapesHook.h  CIUpdateHook.cpp  CIUpdateHook.h  CMakeLists.txt  DXHook.cpp  DXHook.h  Hook.cpp  Hook.h  InWaterSensingSystemHook.cpp  InWaterSensingSystemHook.h  InputHooks.cpp  InputHooks.h  PacketSendHook.cpp  PacketSendHook.h  TestHook.cpp  TestHook.h
Client/Module/: CMakeLists.txt  Catagory.h  Module.h  ModuleManager.cpp  ModuleManager.h
Client/Module/Impl/: BlockEditor.cpp  BlockEditor.h  CMakeLists.txt  ClickGui.cpp  ClickGui.h  CollisionEditor.cpp  CollisionEditor.h  Jesus.cpp  Jesus.h  Module.h  ModuleInstanceComponent.h  TestModule.cpp  TestModule.h
Client/SDK/: Actor.h  ActorFlags.h  Assure.h  Block.h  BlockLegacy.h  BlockPalette.h  BlockSource.h  CMakeLists.txt  ChunkSource.h  ClientInstance.h  Dimension.h  EntityId.h  EntityRegistry.h  Entitycontext.h  Game.cpp  Game.h  GuiData.h  HitResult.h  Item.hpp  ItemRenderer.h  ItemStack.hpp  ItemStackBase.hpp  Level.h  LiquidBlock.h  LocalPlayer.h  Material.h  MaterialType.h  Math.h  MinecraftPacketIds.h  MinecraftPackets.h  Packet.h  PathBuffer.h  ResourceFileSystem.h  ResourceLocation.h  StrictEntityContext.h  SynchedActorDataEntityWrapper.h  TextPacket.h  TexturePtr.h  WeakEntityRef.h  WeakRef.h  (+1 more)
Client/SDK/Component/: AABBShapeComponent.h  MoveInputComponent.h  StateVectorComponent.h
Client/SDK/Component/Flags/: ActorHeadInWaterFlag.h  BoatFlag.h  FlagComponent.h  InWaterFlag.h  SlowingSweetBerryBushTag.h
Client/SDK/MCE/: Color.h  UUID.h
Client/SDK/entt/: fwd.hpp
Include/: CMakeLists.txt
Include/ImGui/: CMakeLists.txt
Include/Kiero/: CMakeLists.txt  kiero.cpp
Utils/: CMakeLists.txt  ImageUtil.h  Keys.h  Manager.h  Mem.cpp  Mem.h  MiscUtil.h  String.h
client/: CMakeLists.txt  CommandManager.cpp  CommandManager.h
client/commands/: CMakeLists.txt  Command.h  HiCommand.cpp  HiCommand.h  PingCommand.cpp  PingCommand.h
